--- a/Index.html
+++ b/Index.html
@@ -297,7 +297,7 @@
                         
                         <div class="bloque-firma">
                             <img src="https://res.cloudinary.com/dcezpnhfc/image/upload/v1754192198/descarga-removebg-preview_q0cjde.png" alt="Foto de recuerdo" class="imagen-recuerdo">
-                            <p class="firma">Me gustas mucho demasiado Anahi bomnitam🦖💌<br> Atte:Joao🦖</p>
+                            <p class="firma">Me gustas mucho  Anahi bomnitam🦖💌<br> Atte:Joao🦖</p>
                         </div>
 
                     </div>
